wip: mac restic backup

--- a/mac-restic-backup/dev.tionis.scripts.mac-restic-backup.plist
+++ b/mac-restic-backup/dev.tionis.scripts.mac-restic-backup.plist
@@ -4,18 +4,12 @@
 <dict>
     <key>Label</key>
     <string>dev.tionis.scripts.mac-restic-backup</string>
-    
-    <key>EnvironmentVariables</key>
-    <dict>
-        <key>PATH</key>
-        <string>/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Users/mom/.cargo/bin</string>
-    </dict>
 
     <key>ProgramArguments</key>
     <array>
-        <string>/Users/mom/.cargo/bin/uv</string> 
-        <string>run</string>
-        <string>/Users/mom/.local/bin/backup_macos.py</string>
+        <string>/bin/sh</string>
+        <string>-c</string>
+        <string>export PATH="$HOME/.local/bin:$PATH"; "$HOME/.local/bin/uv" run "$HOME/.local/bin/backup.py"</string>
     </array>
 
     <key>StartInterval</key>
